Fix header and footer on mobile

--- a/client/views/footer/footer.less
+++ b/client/views/footer/footer.less
@@ -1,3 +1,3 @@
 .footer {
-  padding: 2rem 2rem 0 2rem;
+  padding: 2rem 2rem 1rem 2rem;
 }
